--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="mainJS.js"></script>
 </head>
 <body>
+    Hello there
     <div id="clockContainer">
         <div id="hour"></div>
         <div id="minute"></div>
