moved up in css

--- a/index.html
+++ b/index.html
@@ -4,46 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock Using Pure JS</title>
-   <style>
-       #clockContainer{  
-    position: relative;
-    margin: auto;
-    height: 40vw;
-    width: 40vw; 
-    background: url("https://raw.githubusercontent.com/vishalpatil0/clock-using-HTML-and-JS-and-CSS/b89bbdd8bd13debf9e74f899de8bfde2ec7493d4/clock.png") no-repeat;
-    background-size: 100%;
-}
-
-#hour, #minute, #second{
-    position: absolute;
-    background: black;
-    border-radius: 10px; 
-    transform-origin: bottom;
-}
-#hour{
-    width: 1.8%;
-    height: 25%;
-    top: 25%;
-    left: 48.85%;
-    opacity: 0.8;  
-}
-#minute{
-    width: 1.6%;
-    height: 30%;
-    top: 19%;
-    left: 48.9%;
-    opacity: 0.8;  
-}
-#second{
-    width: 1%;
-    height: 40%;
-    top: 9%;
-    left: 49.25%;
-    opacity: 0.8; 
-    
-}
-
-   </style>
+    <link rel="stylesheet" href="main.css">
     <script src="mainJS.js"></script>
 </head>
 <body>
