undoingmoved up in css12

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     margin: auto;
     height: 40vw;
     width: 40vw; 
-    background: url("./clock.png") no-repeat;
+    background: url("https://raw.githubusercontent.com/vishalpatil0/clock-using-HTML-and-JS-and-CSS/b89bbdd8bd13debf9e74f899de8bfde2ec7493d4/clock.png") no-repeat;
     background-size: 100%;
 }
 
